<resources>
    <string name="app_name">RisingTest</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">
        com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior
    </string>
    <string name="login_view_top_text_normal1">지금 가입하면</string>
    <string name="login_view_top_text_bold">최대 10만원</string>
    <string name="login_view_top_text_normal2">쿠폰 증정!</string>
    <string name="login_to_kakao">카카오톡으로 계속하기</string>
    <string name="login_to_email">이메일로 로그인</string>
    <string name="signUp_to_email">이메일로 가입</string>
    <string name="login_view_problem">로그인에 문제가 있으신가요?</string>
    <string name="search_non_menber_order">비회원 주문 조회하기</string>
    <string name="email_login">이메일 로그인</string>
    <string name="email_signup">이메일 회원가입</string>
    <string name="email">이메일</string>
    <string name="password">비밀번호</string>
    <string name="confirm_password">비밀번호 확인</string>
    <string name="do_login">로그인 하기</string>
    <string name="reset_password">비밀번호 재설정</string>
    <string name="email_login_mismatch">아이디 또는 비밀번호가 잘못되었습니다.</string>
    <string name="nickname_not_duplicated">별명(중복불가)</string>
    <string name="email_signup_interior_expert">인테리어 전문가이시다면</string>
    <string name="email_signup_email_authenticate">이메일 인증하기</string>
    <string name="email_signup_full_agreement_terms_and_conditions">약관 전체동의</string>
    <string name="email_signup_include_agree_selections">선택항목에 대한 동의 포함</string>
    <string name="email_signup_over_age_14">만 14세 이상입니다.</string>
    <string name="email_signup_terms_and_conditions">이용약관</string>
    <string name="email_signup_agree_collect_and_use">개인정보수집 및 이용동의</string>
    <string name="email_signup_agree_use_marketing">개인정보 마케팅 활용 동의</string>
    <string name="email_signup_receive_notification">이벤트, 쿠폰, 특가 알림 메일 및 SMS 등 수신</string>
    <string name="email_signup_essential">(필수)</string>
    <string name="email_signup_choice">(선택)</string>
    <string name="email_signup_recommended_by_friend">친구에게 추천받고 오셨나요?(선택사항)</string>
    <string name="email_signup_input_recommendation_code">추천코드 입력</string>
    <string name="check">확인</string>
    <string name="email_signup_complete">회원가입 완료</string>
    <string name="email_signup_warning_email_empty">이메일을 입력해주세요.</string>
    <string name="email_signup_warning_email_format_invalied">이메일 형식이 올바르지 않습니다.</string>
    <string name="email_signup_warning_email_already_subscribed_by_email">이미 가입한 이메일입니다. \'이메일로 로그인\'으로 로그인해주세요.</string>
    <string name="email_signup_warning_email_already_subsribed_by_kakao">이미 카카오톡 간펀가입으로 가입된 메일입니다. \'카카오톡 계속하기\'를 눌러 로그인해주세요</string>
    <string name="email_signup_warning_password_format_invalied">비밀번호는 영문, 숫자를 포함하여 8자 이상이어야 합니다.</string>
    <string name="email_signup_warning_password_confirm_empty">확인을 위해 비밀번호를 한 번 더 입력해주세요.</string>
    <string name="email_signup_warning_password_confirm_mismatch">비밀번호가 일치하지 않습니다.</string>
    <string name="email_signup_warning_nickname_format_invalied">별명을 2~15자 내로 입력해주세요.</string>
    <string name="email_signup_warning_nickname_in_use">사용 중인 별명입니다.</string>
    <string name="email_signup_recommend_nickname_line1">이 별명은 어떠신가요?</string>
    <string name="email_signup_recommend_nickname_line2">별명은 언제든 수정하실 수 있습니다.</string>
    <string name="email_signup_use">사용하기</string>
    <string name="email_signup_warning_agreement">필수 항목에 동의해주세요.</string>
    <string name="main_btm_nav_home">홈</string>
    <string name="main_btm_nav_store">스토어</string>
    <string name="main_btm_nav_move_construct_repair">이사/시공/수리</string>
    <string name="main_btm_nav_my_page">마이페이지</string>
    <string name="main_upload_photo">사진 올리기</string>
    <string name="main_upload_vedio">동영상 올리기</string>
    <string name="main_upload_review_product">상품 리뷰쓰기</string>
    <string name="main_upload_review_interior_construction">인테리어시공 리뷰쓰기</string>
    <string name="main_upload_question_interior">인테리어 질문하기</string>
    <string name="main_upload_photo_benefit">첫 사진 올리면 1,000P</string>
    <string name="main_upload_vedio_benefit">매일 인기동영상 최대 4,000P</string>
    <string name="main_upload_review_product_benefit">포토리뷰 쓰면 250P</string>
    <string name="main_upload_review_interior_construction_benefit">최대 5,000P</string>
    <string name="main_upload_notion">집들이, 노하우 업로드 안내</string>
    <string name="share">공유</string>
    <string name="scrapbook">스크랩북</string>
    <string name="product">상품</string>
    <string name="edit">편집</string>
    <string name="scrap_no_contents">컨텐츠가 없습니다.</string>
    <string name="scrap_no_folder">폴더가 없습니다.</string>
    <string name="scrap_folder_move">폴더이동</string>
    <string name="cancellation">취소</string>
    <string name="deletion">삭제</string>
    <string name="scraped_it">스크랩했습니다.</string>
    <string name="see_scrapbook">스크랩북 보기</string>
    <string name="put_in_folder">폴더에 담기</string>
    <string name="photo">사진</string>
    <string name="shopping_cart">장바구니</string>
    <string name="go_to_pick_up_product">상품 담으러 가기</string>
    <string name="all_select">모두선택</string>
    <string name="delete_select">선택삭제</string>
    <string name="total_product_amount">총 상품금액</string>
    <string name="total_delivery_charge">총 배달비</string>
    <string name="total_discount_amount">총 할인금액</string>
    <string name="payment_amount">결제금액</string>
    <string name="won">원</string>
    <string name="products_purchased_by_other_customers">다른 고객이 함께 구매한 상품</string>
    <string name="buy_right_away">바로구매</string>
    <string name="change_option">옵션변경</string>
    <string name="add_bundled_delivery_product">묶음배송 상품 추가하기</string>
    <string name="if_you_pay_by_17_o_click_on_weekdays">평일 17:00까지 결제시</string>
    <string name="today_departure_deadline">오늘출발 마감</string>
    <string name="sceduled_to_be_sent">발송 예정</string>
    <string name="color">색상</string>
    <string name="option">옵션</string>
    <string name="benefit">혜택</string>
    <string name="see_benefit">혜택보기</string>
    <string name="delivery">배송</string>
    <string name="regular_delivery">일반택배</string>
    <string name="expect_arrive">도착예정</string>
    <string name="brand_home">브랜드홈</string>
    <string name="styling_shot_of_users">유저들의 스타일링샷</string>
    <string name="see_all_styling_shot">스타일링샷 전체보기</string>
    <string name="upload_photo">사진 올리기</string>
    <string name="ad_title_of_first_photo">첫 사진 올리면 1,000 포인트를 드려요.</string>
    <string name="ad_subtitle_of_first_photo">지금 살고 있는 공간을 공유하고\n포인트를 받아 쇼핑도 즐겨 보세요!</string>
    <string name="product_information">상품정보</string>
    <string name="product_of_review">리뷰\n0</string>
    <string name="product_of_inquiry">문의\n0</string>
    <string name="delivery_refund">배송/환불</string>
    <string name="recommendation">추천</string>
    <string name="special_price">특가</string>
    <string name="immediate_discount">즉시할인가</string>
    <string name="welcome_0.1_accumulate">적립 (WELCOME 0.1\% 적립)</string>
    <string name="month">월</string>
    <string name="months">개월</string>
    <string name="free_delivery">무료배송</string>
    <string name="interest_free_installment">무이자할부</string>
    <string name="jeju_island_mountain_island">제주도\/도서산간</string>
    <string name="differential_delivery_cost_by_region">지역별 차등배송비</string>
    <string name="scheduled_to_arrive">도착 예정</string>
    <string name="buying">구매하기</string>
    <string name="review">리뷰</string>
    <string name="inquiry">문의</string>
    <string name="writing_review">리뷰쓰기</string>
    <string name="report">신고</string>
    <string name="see_more_review">리뷰 더보기</string>
    <string name="delivery_exchange_refund">배송/교환/환불</string>
    <string name="short_cut">바로가기</string>
    <string name="close">닫기</string>
    <string name="please_selected_product_option">상품 옵션을 선택해주세요.</string>
    <string name="would_you_like_to_cancel_your_order">주문을 취소하겠습니까?</string>
    <string name="order_and_payment">주문\/결제</string>
    <string name="buyer">주문자</string>
    <string name="name">이름</string>
    <string name="delivery_destination">배송지</string>
    <string name="fill_the_same_as_above">위와 동일하게 채우기</string>
    <string name="cell_phone">휴대전화</string>
    <string name="please_choose">선택해주세요</string>
    <string name="please_enter">입력해주세요</string>
    <string name="delivery_destination_name">배송지명</string>
    <string name="recipient">받는사람</string>
    <string name="contect_number">연락처</string>
    <string name="address">주소</string>
    <string name="find_address">주소찾기</string>
    <string name="enter_detailed_address">상세주소 입력</string>
    <string name="save_as_default_delivery_destination">기본 배송지로 저장</string>
    <string name="please_select_a_request_when_delivering">배송시 요청사항을 선택해주세요</string>
    <string name="please_put_it_in_front_of_the_door_if_im_absent">부재시 문앞에 놓아주세요</string>
    <string name="please_contact_me_before_delivery">배송전에 미리 연락주세요</string>
    <string name="please_leave_it_at_the_security_office_if_im_absent">부재시 경비실에 맡겨 주세요</string>
    <string name="please_call_me_or_leave_a_text_message_if_im_absent">부재시 전화주시거나 문자 남겨주세요</string>
    <string name="direct_input">직접입력</string>
    <string name="coupon">쿠폰</string>
    <string name="order_product">주문상품</string>
    <string name="no_coupons_available">사용 가능한 쿠폰이 없습니다</string>
    <string name="do_you_have_a_coupon_code">쿠폰 코드가 있으신가요?</string>
    <string name="point">포인트</string>
    <string name="no_points_available">사용 가능한 포인트가 없습니다.</string>
    <string name="available_points">사용 가능 포인트</string>
    <string name="full_use">전액사용</string>
    <string name="means_of_payment">결제 수단</string>
    <string name="card">카드</string>
    <string name="deposit_without_bankbook">무통장입금</string>
    <string name="notification_of_diposit_without_bankbook">
        현금으로 결제한 모든 금액은 우리은행과 채무지급보증계약을 체결하여 고객님의 안전거래를 보장하고 있습니다.
    </string>
    <string name="kakao_pay">카카오페이</string>
    <string name="benefit_of_kakao_pay">1만원 즉시할인</string>
    <string name="notificaiton_title_of_kakao_pay">카카오페이 결제 혜택</string>
    <string name="notification1_of_kakao_pay">
        카카오페이 내 KB국민카드로 20만원\/10만원 이상 결제 시 1만원\/5천원 즉시할인 \(기간 내 각 1회 적용 가능\)
    </string>
    <string name="notification2_of_kakao_pay">9\/14~30</string>
    <string name="toss">토스</string>
    <string name="benefit_of_toss">3000원 적립</string>
    <string name="notification_title_of_toss">토스페이 결제 혜택</string>
    <string name="notification1_of_toos">
        토스페이 생애 첫 결제시 3,000원 캐시백 \(3,000원 이상 결제 시\), 9\/1~30
    </string>
    <string name="notification2_of_toos">토스페이 후불결제 가능</string>
    <string name="naver_pay">네이버페이</string>
    <string name="benefit_of_naver_pay">최대5000적립</string>
    <string name="notificaiton_title_of_naver_pay">네이버페이 결제 혜택</string>
    <string name="notification1_of_naver_pay">
        \[9\/21~30\] 네이버페이로 10만원 이상 결제 시 기본적립 외 3,000p 추가적립
    </string>
    <string name="notification2_of_naver_pay">9\/14~30</string>
    <string name="payco">페이코</string>
    <string name="benefit_of_payco">최대3%적립</string>
    <string name="phone">핸드폰</string>
    <string name="please_select_a_card">카드를 선택해주세요.</string>
    <string name="lump_sum_payment">일시불</string>
    <string name="delivery_amount">배송비</string>
    <string name="use_coupons">쿠폰 사용</string>
    <string name="use_points">포인트 사용</string>
    <string name="final_payment_amount">최종 결제 금액</string>
    <string name="scheduled_to_accumulate">적립 예정</string>
    <string name="agree_with_all_of_the_following">아래 내용에 모두 동의합니다. (필수)</string>
    <string name="agree_order_payment_1">개인정보 수집 이용 및 제 3자 제공 동의 (필수)</string>
    <string name="home_search">오늘의집 통합검색</string>
    <string name="home_tabbar_popluar">인기</string>
    <string name="home_tabbar_following">팔로잉</string>
    <string name="home_tabbar_photo">사진</string>
    <string name="home_tabbar_housewarming">집들이</string>
    <string name="home_tabbar_know_how">노하우</string>
    <string name="home_tabbar_expert_housewarming">전문가집들이</string>
    <string name="home_tabbar_q_and_a">질문과답변</string>
    <string name="store_tabbar_exhibitions">기획전</string>
</resources>