<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/main_btm_nav_home"
        android:icon="@drawable/sel_main_btm_nav_home"
        android:title="@string/main_btm_nav_home"
        android:enabled="true"
        android:checkable="true"
        app:showAsAction="always"/>
    <item
        android:id="@+id/main_btm_nav_shopping"
        android:icon="@drawable/sel_main_btm_nav_shopping"
        android:title="@string/main_btm_nav_shopping"
        android:enabled="true"
        app:showAsAction="always"/>
    <item
        android:id="@+id/main_btm_nav_construct"
        android:icon="@drawable/sel_main_btm_nav_construct"
        android:title="@string/main_btm_nav_move_construct_repair"
        android:enabled="true"
        app:showAsAction="always"/>
    <item
        android:id="@+id/main_btm_nav_my_page"
        android:icon="@drawable/sel_main_btm_nav_my_page"
        android:title="@string/main_btm_nav_my_page"
        android:enabled="true"
        app:showAsAction="always"/>

    <item
        android:id="@+id/main_btm_nav_upload"
        android:title = ""
        android:enabled="true"
        app:showAsAction="always"/>

</menu>