<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context=".src.main.home.HomeFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/lyaout_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/layout_collapsingToolBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                app:layout_collapseMode="parallax"
                android:paddingVertical="@dimen/fragment_appbar_padding_vertical"
                android:paddingHorizontal="@dimen/fragment_appbar_padding_horizontal">

                <ImageView
                    android:id="@+id/iv_menu_appbar"
                    android:layout_width="@dimen/fragment_appbar_icon_width"
                    android:layout_height="@dimen/fragment_appbar_search_height"
                    android:src="@drawable/ic_menu"
                    android:visibility="gone"
                    android:layout_marginEnd="@dimen/fragment_padding"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <LinearLayout
                    android:id="@+id/layout_search"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/fragment_appbar_search_height"
                    android:orientation="horizontal"
                    android:background="@drawable/shape_search_view"
                    android:gravity="center|start"
                    android:layout_marginEnd="@dimen/fragment_appbar_margin"
                    android:padding="@dimen/fragment_appbar_search_padding"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/iv_store_appbar_scrap"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/iv_search_appbar"
                        android:layout_width="@dimen/fragment_appbar_search_icon_size"
                        android:layout_height="@dimen/fragment_appbar_search_icon_size"
                        android:layout_margin="5dp"
                        app:tint="@color/fragment_appbar_search_icon"
                        android:src="@drawable/ic_search"/>

                    <EditText
                        android:id="@+id/edt_search_appbar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/home_search"
                        android:textColorHint="@color/fragment_appbar_search_hint_text"
                        android:textColor="@color/black"
                        android:textSize="@dimen/fragment_appbar_edt_text_size"
                        android:background="@android:color/transparent"
                        app:layout_constraintStart_toEndOf="@id/iv_menu_appbar"
                        app:layout_constraintTop_toTopOf="parent"/>

                </LinearLayout>

                <ImageView
                    android:id="@+id/iv_home_appbar_scrap"
                    android:layout_width="@dimen/fragment_appbar_icon_width"
                    android:layout_height="@dimen/fragment_appbar_search_height"
                    android:src="@drawable/ic_scrap"
                    android:layout_marginEnd="@dimen/fragment_appbar_margin"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/iv_home_appbar_basket"/>

                <ImageView
                    android:id="@+id/iv_home_appbar_basket"
                    android:layout_width="@dimen/fragment_appbar_icon_width"
                    android:layout_height="@dimen/fragment_appbar_search_height"
                    android:src="@drawable/ic_basket"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/layout_tab"
            android:layout_width="match_parent"
            android:layout_height="@dimen/fragment_tabbar_height"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tabIndicatorColor="@color/fragment_tabbar_selected"
            app:tabIndicatorFullWidth="true"
            app:tabIndicatorHeight="2dp"
            app:tabMinWidth="0dp"
            app:tabMode="scrollable"
            app:tabGravity="start"
            app:tabPaddingStart="15dp"
            app:tabPaddingEnd="15dp"
            android:layout_marginHorizontal="6dp"
            app:tabRippleColor="@color/white"
            app:tabSelectedTextColor="@color/fragment_tabbar_selected"
            app:tabTextAppearance="@style/fragment_tabbar_text_style"
            app:tabTextColor="@color/fragment_tabbar_unselected">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_tabbar_popluar" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_tabbar_following" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_tabbar_photo" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_tabbar_housewarming" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_tabbar_know_how" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_tabbar_expert_housewarming" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_tabbar_q_and_a" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/store_tabbar_exhibitions" />

        </com.google.android.material.tabs.TabLayout>

        <View
            android:id="@+id/line_tabbar"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray_line"/>

    </com.google.android.material.appbar.AppBarLayout>



    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        </LinearLayout>


    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>